Added processbuilder and logger